Linked List srcipt updated!